--- a/src/app/chh-web-components/chh-app-change-pass/chh-app-change-pass.page.html
+++ b/src/app/chh-web-components/chh-app-change-pass/chh-app-change-pass.page.html
@@ -40,7 +40,7 @@
             </ion-item>
             <ion-item>
               <ion-input type="password" id="input-password" placeholder = "Old Password" [type]="getType1()"  [(ngModel)]="OldPassword"></ion-input>
-              <ion-icon  name="eye-off-outline" [name]="getName1()" item-right   class="rectangle1"></ion-icon>
+              <ion-icon  name="eye-off-outline" [name]="getName1()" item-right  (click)="showPassword1()"  class="rectangle1"></ion-icon>
             </ion-item>
           </ion-list>
 
@@ -54,7 +54,7 @@
               </ion-item>
               <ion-item lines="none">
                 <ion-input id="password" formControlName="password" type="password" class="form-control" [ngClass]="frmSignup.controls['password'].invalid ? 'is-invalid' : ''" [type]="getType2()"  [(ngModel)]="NewPassword" placeholder = "New Password"></ion-input>
-                <ion-icon  name="eye-off-outline" [name]="getName2()"item-right   class="rectangle2"></ion-icon>
+                <ion-icon  name="eye-off-outline" [name]="getName2()"item-right  (click)="showPassword2()" class="rectangle2"></ion-icon>
               </ion-item>
               <ion-list>
               <ion-item  lines="none" class="ion-text-wrap fontSize-14" [ngClass]="frmSignup.controls['password'].hasError('required') || frmSignup.controls['password'].hasError('minlength')  ? 'text-danger' : 'text-success'">
@@ -117,7 +117,7 @@
                 <ion-item lines="none">
                   <ion-input id="confirmPassword" formControlName="confirmPassword" type="password" class="form-control"
                   [ngClass]="frmSignup.controls['confirmPassword'].invalid ? 'is-invalid' : ''"[type]="getType3()"  [(ngModel)]="ConfirmPassword" placeholder = "Confirm Password"></ion-input>
-                  <ion-icon  name="eye-off-outline" [name]="getName3()"item-right   class="rectangle3"></ion-icon>
+                  <ion-icon  name="eye-off-outline" [name]="getName3()"item-right (click)="showPassword3()"  class="rectangle3"></ion-icon>
                 </ion-item>
 
             </div>
