--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -27,7 +27,7 @@
               
 
               <ion-input type="password" id="input-password" [type]="getType()"  (keyup.enter)="checkInput()" [(ngModel)]="postData.password"></ion-input>
-              <ion-icon  name="eye-off-outline" [name]="getName()" item-right   class="rectangle"></ion-icon>
+              <ion-icon  name="eye-off-outline" [name]="getName()" item-right  (click)="showPassword()"   class="rectangle"></ion-icon>
 
 
 
