--- a/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.html
+++ b/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.html
@@ -129,7 +129,7 @@
               </ion-item>
               <ion-item lines="none">
                 <ion-input id="password" formControlName="password" type="password" class="form-control" [ngClass]="frmSignup.controls['password'].invalid ? 'is-invalid' : ''" [type]="getType2()"  [(ngModel)]="NewPassword" placeholder = "New Password"></ion-input>
-                <ion-icon  name="eye-off-outline" [name]="getName2()"item-right   class="rectangle2"></ion-icon>
+                <ion-icon  name="eye-off-outline" [name]="getName2()"item-right (click)="showPassword1()"    class="rectangle2"></ion-icon>
               </ion-item>
               <ion-list>
                 <ion-item  lines="none" class="ion-text-wrap fontSize-14" [ngClass]="frmSignup.controls['password'].hasError('required') || frmSignup.controls['password'].hasError('minlength')  ? 'text-danger' : 'text-success'">
@@ -172,7 +172,7 @@
               <ion-item lines="none">
                 <ion-input id="confirmPassword" formControlName="confirmPassword" type="password" class="form-control"
                 [ngClass]="frmSignup.controls['confirmPassword'].invalid ? 'is-invalid' : ''"[type]="getType3()"  [(ngModel)]="ConfirmPassword" placeholder = "Confirm Password"></ion-input>
-                <ion-icon  name="eye-off-outline" [name]="getName3()"item-right   class="rectangle3"></ion-icon>
+                <ion-icon  name="eye-off-outline" [name]="getName3()"item-right  (click)="showPassword2()"  class="rectangle3"></ion-icon>
               </ion-item>
 
   
