updated notification settings

--- a/src/app/tab-settings/tab-settings.page.html
+++ b/src/app/tab-settings/tab-settings.page.html
@@ -106,7 +106,7 @@
 
               <!-- SMS NOTIFICATION -->
               <!-- DISCHARGE -->
-                <ion-item>
+                <!--ion-item>
                   <ion-label class="ion-text-wrap"
                     >{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_SMS_NOTIFICATIONS_FOR_DISCHARGE}}</ion-label
                   >
@@ -116,7 +116,7 @@
                     [(ngModel)]="smsDischarge"
                     (ionChange)="toggle($event,'smsNotification','patientDischarged',isset_smsDischarge)"
                   ></ion-toggle>
-                </ion-item>
+                </ion-item-->
 
 
               <!-- PUSH NOTIFICATION -->
