--- a/src/app/chh-web-components/chh-app-change-pass/chh-app-change-pass.page.html
+++ b/src/app/chh-web-components/chh-app-change-pass/chh-app-change-pass.page.html
@@ -39,7 +39,7 @@
               <div class="ion-text-wrap" #psWord0 id="pWord0"><b>Old Password</b><i>{{errMessage}}</i><br /></div>
             </ion-item>
             <ion-item>
-              <ion-input type="password" id="input-password" placeholder = "Old Password" [type]="getType1()"  [(ngModel)]="OldPassword"></ion-input>
+              <ion-input type="password" id="input-old-password" placeholder = "Old Password" [type]="getType1()"  [(ngModel)]="OldPassword"></ion-input>
               <ion-icon  name="eye-off-outline" [name]="getName1()" item-right   class="rectangle1"></ion-icon>
             </ion-item>
           </ion-list>
