--- a/src/app/tab-in-patients/tab-in-patients.page.html
+++ b/src/app/tab-in-patients/tab-in-patients.page.html
@@ -167,10 +167,13 @@
                           name="location-outline"
                           slot="start"
                         ></ion-icon
-                        >{{this.constants.CHH_NAME__VALUE__MANDAUE}} </span
+                        > {{this.constants.CHH_NAME__VALUE__MANDAUE}} </span
                       ><br />
-                      <ion-icon name="bed-outline" slot="start"></ion-icon>Room
+                      <ion-icon name="bed-outline" slot="start"></ion-icon> Room
                       {{x.room_no}}<br />
+                 
+                      <ion-icon name="clipboard-outline" slot="start"></ion-icon>
+                      as {{x.Doctor_Status}}<br />
                       <!--ion-icon name="body-outline"></ion-icon>Patient Journey<br /-->
                     </p>
                     <br />
