--- a/src/app/tab-in-patients/tab-in-patients.page.html
+++ b/src/app/tab-in-patients/tab-in-patients.page.html
@@ -349,10 +349,10 @@
 
         <ng-template #noDataAvailable>
           <div *ngIf="!objecthandler && isFetchDone">
-            <ion-list-header slot="center" mode="ios">
-              {{this.messages.NO_DATA_AVAILABLE}}
-            </ion-list-header>
             <img src="assets/img/3973477-no-data-concept-illustration-custom.png">
+            <div class="ion-text-center">
+              <h3> {{this.messages.NO_DATA_AVAILABLE}}</h3>
+            </div>
           </div>
         </ng-template>
       </ion-col>
