Initial Get Exam Results code.

--- a/src/app/tab-in-patients/tab-in-patients.page.html
+++ b/src/app/tab-in-patients/tab-in-patients.page.html
@@ -75,7 +75,7 @@
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" mode="ios">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
-
+  <!--button (click)="generatePDF()">Generate PDF</button-->  
   <ion-grid class="ion-no-padding">
     <ion-row>
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
