--- a/src/global.scss
+++ b/src/global.scss
@@ -66,7 +66,8 @@
   
   --background: transparent !important;
 
-
+  width: 100%;
+  height: 100%;
  }
  .my-custom-modal-appointment-css .modal-wrapper {
    height: 50%;
@@ -81,6 +82,20 @@
   .fontSize-14{
     font-size:14px
   }
+  .font-weight-bold{
+    font-weight: bold;
+  }
+  .overflow-scroll{
+    overflow-y:scroll;
+  }
+  .max-height-300{
+    max-height: 300px;
+  }
+
+
+  .max-height-500{
+    max-height: 500px;
+  }
 .my-privacy-modal-css .modal-wrapper {
   height: 70%;
   width: 40%;
@@ -88,7 +103,11 @@
   position: absolute; 
   display: block;  
 }
-
+.small-ion-item{
+  --background:red;
+  --padding-end: 0px;
+  --inner-padding-end: 0px;
+}
 .with-header {
   height: auto;
   top: 12px;  // height of your app-header component
