added date performed

--- a/src/app/chh-web-components/chh-app-test/chh-app-base/chh-app-base.page.html
+++ b/src/app/chh-web-components/chh-app-test/chh-app-base/chh-app-base.page.html
@@ -35,6 +35,7 @@
         {{hospitalSite}} - {{x.RoomNo}}<br />
         Gender : {{x.Gender}}<br />
         Birthdate : {{x.Birthdate}}
+        Date Performed : {{x.Date_Performed}}
        <br />
         <div class="ion-text-wrap">
           Address : {{x.Address}}
