--- a/src/app/chh-web-components/chh-app-test/chh-app-base/chh-app-base.page.html
+++ b/src/app/chh-web-components/chh-app-test/chh-app-base/chh-app-base.page.html
@@ -47,6 +47,13 @@
     [examDetails]="ExamDetails"
     [site]="hospitalSite"
     *ngIf="ExamDetails.Exam == 'Chemistry'"></app-chh-app-test-chemistry> 
+
+    <app-chh-app-test-fecalysis 
+    [examDetails]="ExamDetails"
+    [site]="hospitalSite"
+    *ngIf="ExamDetails.Exam == 'Fecalysis'"></app-chh-app-test-fecalysis> 
+
+    
     <!--ion-footer>
       <ion-row>
         <ion-col center text-center>
