updated fecalysis and added serology

--- a/src/app/chh-web-components/chh-app-in-patient-modal/chh-app-in-patient-modal.page.html
+++ b/src/app/chh-web-components/chh-app-in-patient-modal/chh-app-in-patient-modal.page.html
@@ -207,7 +207,7 @@ o888o        `Y888""8o   "888" o888o `Y8bod8P' o888o o888o   "888"
         </div>
       </ion-item>
 
-      <div *ngIf="examListSkeleton==false && currentExamList==''">
+      <!--div *ngIf="examListSkeleton==false && currentExamList==''">
 
     
         <img src="assets/img/3973477-no-data-concept-illustration-custom.png">
@@ -215,7 +215,7 @@ o888o        `Y888""8o   "888" o888o `Y8bod8P' o888o o888o   "888"
           <h3> {{this.messages.NO_DATA_AVAILABLE}}</h3>
         </div>
 
-      </div>
+      </div-->
           <div class="currentTests" style="background-color: green;">
 
 
