--- a/src/global.scss
+++ b/src/global.scss
@@ -96,6 +96,14 @@
   .max-height-500{
     max-height: 500px;
   }
+  .border-left{
+    border-left: 1px solid rgba(0, 0, 0, 0.3);
+  }
+  .border-bottom{
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  }
+
+
 .my-privacy-modal-css .modal-wrapper {
   height: 70%;
   width: 40%;
