--- a/src/app/chh-web-components/chh-app-test/chh-app-test-fecalysis/chh-app-test-fecalysis.component.html
+++ b/src/app/chh-web-components/chh-app-test/chh-app-test-fecalysis/chh-app-test-fecalysis.component.html
@@ -1,21 +1,21 @@
 <ion-item>
   <ion-grid><ion-row><ion-col size="12"><b>Gross</b></ion-col></ion-row></ion-grid>
 </ion-item>
-<ion-item>
+<ion-item class="ion-no-border" lines="none">
   <ion-grid>
     <ion-row>
       <ion-col size="12" ><b></b></ion-col>
     </ion-row>
     <ng-container  *ngFor="let x of resultDetails">
     <ion-row  *ngIf="x.Exam_Description == 'Color' || x.Exam_Description == 'Consistency' ">
-      <ion-col size="6">{{x.Exam_Description}}</ion-col>
-      <ion-col size="6" >{{x.Result}}</ion-col>
+      <ion-col size="5" class=" ion-padding-vertical border-bottom">{{x.Exam_Description}}</ion-col>
+      <ion-col size="7" class="border-bottom border-left ion-padding-vertical border-bottom">{{x.Result}}</ion-col>
     </ion-row>
     </ng-container>
   </ion-grid>
 </ion-item>
 
-<ion-item>
+<ion-item class="ion-no-border" lines="none">
   <ion-grid><ion-row><ion-col size="12"><b>&nbsp;</b></ion-col></ion-row></ion-grid>
 </ion-item>
 
@@ -23,33 +23,33 @@
 <ion-item>
   <ion-grid><ion-row><ion-col size="12"><b>Microscopic</b></ion-col></ion-row></ion-grid>
 </ion-item>
-<ion-item>
-  <ion-grid>
+<ion-item class="ion-no-border" lines="none">
+  <ion-grid >
 
     <ng-container  *ngFor="let x of resultDetails">
     <ion-row  *ngIf="x.Exam_Description == 'Red Blood Cell' || x.Exam_Description == 'White Blood Cell'|| x.Exam_Description == 'Bacteria'|| x.Exam_Description == 'Yeast Cells' ">
-      <ion-col size="6">{{x.Exam_Description}}</ion-col>
-      <ion-col size="6" >{{x.Result}}</ion-col>
+      <ion-col size="6" class=" ion-padding-vertical border-bottom">{{x.Exam_Description}}</ion-col>
+      <ion-col size="6" class="border-bottom border-left ion-padding-vertical border-bottom">{{x.Result}}</ion-col>
     </ion-row>
     </ng-container>
 
   </ion-grid>
 </ion-item>
 
-<ion-item>
+<ion-item class="ion-no-border" lines="none">
   <ion-grid><ion-row><ion-col size="12"><b>&nbsp;</b></ion-col></ion-row></ion-grid>
 </ion-item>
 
 <ion-item>
   <ion-grid><ion-row><ion-col size="12"><b>Parasites & OVA</b></ion-col></ion-row></ion-grid>
 </ion-item>
-<ion-item>
-  <ion-grid>
+<ion-item class="ion-no-border" lines="none">
+  <ion-grid >
 
     <ng-container  *ngFor="let x of resultDetails">
     <ion-row  *ngIf="!(x.Exam_Description == 'Red Blood Cell' || x.Exam_Description == 'White Blood Cell'|| x.Exam_Description == 'Bacteria'|| x.Exam_Description == 'Yeast Cells' || x.Exam_Description == 'Color' || x.Exam_Description == 'Consistency' ) ">
-      <ion-col size="6">{{x.Exam_Description}}</ion-col>
-      <ion-col size="6" >{{x.Result}}</ion-col>
+      <ion-col size="6"  class=" ion-padding-vertical border-bottom">{{x.Exam_Description}}</ion-col>
+      <ion-col size="6"  class="border-bottom border-left ion-padding-vertical border-bottom" >{{x.Result}}</ion-col>
     </ion-row>
     </ng-container>
 
