--- a/src/app/chh-web-components/chh-app-test/chh-app-test-serology/chh-app-test-serology.component.html
+++ b/src/app/chh-web-components/chh-app-test/chh-app-test-serology/chh-app-test-serology.component.html
@@ -1,13 +1,13 @@
 
-<ion-item>
+<ion-item class="ion-no-border">
   <ion-grid>
     <ion-row>
       <ion-col size="12" ><b></b></ion-col>
     </ion-row>
     <ng-container  *ngFor="let x of resultDetails">
     <ion-row >
-      <ion-col size="6" class="border-bottom border-bottom">{{x.Exam_Description}}</ion-col>
-      <ion-col size="6" class="border-bottom border-left ion-padding-vertical border-bottom" >{{x.Result}}</ion-col>
+      <ion-col size="6" class="border-bottom ">{{x.Exam_Description}}</ion-col>
+      <ion-col size="6" class="border-bottom border-left ion-padding-vertical " >{{x.Result}}</ion-col>
     </ion-row>
     </ng-container>
   </ion-grid>
