--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -180,6 +180,26 @@
   --ion-color-mangolight-contrast-rgb: 0, 0, 0;
   --ion-color-mangolight-shade: #275228;
   --ion-color-mangolight-tint: #275228;
+
+
+      /* width */
+    ::-webkit-scrollbar {
+      width: 5px;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 5px grey; 
+      border-radius: 10px;
+    }
+    
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+      background: #275228; 
+      border-radius: 10px;
+    }
+
+
 }
 .chh-darkmode {
   background-color: #ffffff;
