fixed some issue

--- a/src/app/chh-web-components/chh-app-in-patient-modal/chh-app-in-patient-modal.page.html
+++ b/src/app/chh-web-components/chh-app-in-patient-modal/chh-app-in-patient-modal.page.html
@@ -165,7 +165,7 @@ o888o        `Y888""8o   "888" o888o `Y8bod8P' o888o o888o   "888"
           </div>
 
 
-            <ng-container>
+            <!--ng-container>
               <div
                 *ngIf="!objecthandler && !isFetchDone else noDataAvailable"
                 class=" custom-skeleton">
@@ -178,7 +178,7 @@ o888o        `Y888""8o   "888" o888o `Y8bod8P' o888o o888o   "888"
                   </ion-label>
                 </ion-item>
               </div>
-            </ng-container>
+            </ng-container-->
 
 
         </div>
@@ -329,7 +329,7 @@ o888o        `Y888""8o   "888" o888o `Y8bod8P' o888o o888o   "888"
             </div>
             </div>
             
-            <ng-container>
+            <!--ng-container>
               <div
                 *ngIf="!objecthandler && !isFetchDone else noDataAvailable"
                 class=" custom-skeleton">
@@ -342,7 +342,7 @@ o888o        `Y888""8o   "888" o888o `Y8bod8P' o888o o888o   "888"
                   </ion-label>
                 </ion-item>
               </div>
-            </ng-container>
+            </ng-container-->
         </div>
       </ion-item>
 
