--- a/src/app/chh-web-components/chh-app-in-patient-modal/chh-app-in-patient-modal.page.scss
+++ b/src/app/chh-web-components/chh-app-in-patient-modal/chh-app-in-patient-modal.page.scss
@@ -10,3 +10,10 @@ ion-list.no-last-border {
 .custom-font{
   font-family: 'Inconsolata', monospace;
 }
+
+
+.nav-primary.active {
+  color: #275228; 
+  font-weight:bolder;
+  font-size: large;
+}
