--- a/src/global.scss
+++ b/src/global.scss
@@ -92,7 +92,10 @@
     max-height: 300px;
   }
 
+  .max-height-87vh{
+    max-height: 87vh;
 
+  }
   .max-height-500{
     max-height: 500px;
   }
@@ -105,6 +108,7 @@
   .border-bottom{
     border-bottom: 1px solid rgba(0, 0, 0, 0.3);
   }
+
 
 
 .my-privacy-modal-css .modal-wrapper {
