added filter on test results

--- a/src/app/chh-web-components/chh-app-in-patient-modal/chh-app-in-patient-modal.page.scss
+++ b/src/app/chh-web-components/chh-app-in-patient-modal/chh-app-in-patient-modal.page.scss
@@ -13,7 +13,9 @@ ion-list.no-last-border {
 
 
 .nav-primary.active {
-  color: #275228; 
-  font-weight:bolder;
-  font-size: large;
+  color: #275228;
+  font-weight: 1000 !important;
+  background-color: yellow;
+  //font-weight:bolder;
+
 }
