--- a/src/app/chh-web-components/chh-app-in-patient-modal/chh-app-in-patient-modal.page.html
+++ b/src/app/chh-web-components/chh-app-in-patient-modal/chh-app-in-patient-modal.page.html
@@ -195,9 +195,19 @@ o888o        `Y888""8o   "888" o888o `Y8bod8P' o888o o888o   "888"
         <div class="ion-text-wrap"><b>Lab Tests</b><br /></div>
         
       </ion-item>
+
+        <ion-searchbar           
+        [(ngModel)]="searchBar"
+        (ionChange)="filterList()"
+        mode="ios"></ion-searchbar>
+
+
+
+
       <ion-item style="padding-top: 10px;" lines="none" *ngIf="currentExamList != ''">
         <div class="ion-text-wrap">
           <div class="navbar" class="ion-text-center" >
+            
             <ion-button id="ion-button-filter-both" fill="clear" class="link" size="small">Current Tests
             </ion-button>
             <ion-button id="ion-button-filter-both" fill="clear" class="link" size="small">All Tests
@@ -271,7 +281,7 @@ o888o        `Y888""8o   "888" o888o `Y8bod8P' o888o o888o   "888"
               </ion-item>
 
               <div *ngIf="!isDesktop" class="overflow-scroll max-height-300">
-                <div *ngFor="let x of currentExamList" >
+                <div *ngFor="let x of currentExamList_filtered" >
                   <ion-item lines="" (click)="examDetails(x,data.site)">
                     <div class="ion-text-wrap"  >
                       <ion-text >
@@ -1045,24 +1055,6 @@ o888o        d888b    `Y8bod8P' o888o      o888o        `Y8bod8P' `Y8bod8P'
 
 <ion-grid ion-grid-width-md *ngIf="isDesktop">
   <ion-col>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <ion-row>
       <ion-col size="3" >
              
@@ -1153,7 +1145,11 @@ o888o        d888b    `Y8bod8P' o888o      o888o        `Y8bod8P' `Y8bod8P'
                 <ion-item style="padding-top: 10px;">
                   <div class="ion-text-wrap"><b>Result list</b><br /></div>
                 </ion-item>
-                <div *ngFor="let x of currentExamList; let i = index" >
+                <ion-searchbar           
+                  [(ngModel)]="searchBar"
+                  (ionChange)="filterList()"
+                  mode="ios"></ion-searchbar>
+                <div *ngFor="let x of currentExamList_filtered; let i = index" >
                   <ion-item lines="" class="nav-primary pointer" (click)="examDetails(x,data.site,i)" [class.active]="i == HighlightRow" >
                     <div class="ion-text-wrap"  >
                       <ion-text >
@@ -1188,6 +1184,15 @@ o888o        d888b    `Y8bod8P' o888o      o888o        `Y8bod8P' `Y8bod8P'
                 [site]="hospitalSite"
                 *ngIf="fecalysis && refresher"
                 ></app-chh-app-test-fecalysis>
+
+
+                <app-chh-app-test-cbc
+                [examDetails]="ExamData"
+                [site]="hospitalSite"
+                *ngIf="cbc && refresher"
+                ></app-chh-app-test-cbc>
+
+
                 </div>
       </ion-col>
       <ion-col size="3">
