updated urinalysis and CBC

--- a/src/app/chh-web-components/chh-app-test/chh-app-base/chh-app-base.page.html
+++ b/src/app/chh-web-components/chh-app-test/chh-app-base/chh-app-base.page.html
@@ -80,7 +80,16 @@
     <app-chh-app-test-cbc
     [examDetails]="ExamDetails"
     [site]="hospitalSite"
-    *ngIf="ExamDetails.Exam == 'Hematology' && ExamDetails.ExamType == 'CBC'"></app-chh-app-test-cbc>    
+    *ngIf="ExamDetails.Exam == 'Hematology' && ExamDetails.ExamType == 'CBC'"></app-chh-app-test-cbc> 
+
+
+    <app-chh-app-test-urinalysis
+    [examDetails]="ExamDetails"
+    [site]="hospitalSite"
+    *ngIf="ExamDetails.Exam == 'Urinalysis' "></app-chh-app-test-urinalysis> 
+    
+
+
     <!--ion-footer>
       <ion-row>
         <ion-col center text-center>
