Revert back to original Welcome message.

--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -10,7 +10,7 @@
           <ion-slide id="slide1">
             <!-- <app-logo></app-logo> -->
             <img src="assets/img/LOGOMARK.png" alt="Chong Hua Hospital">
-            <h1><b>Welcome aboard, Doc! (staging)</b></h1>
+            <h1><b>Welcome aboard, Doc!</b></h1>
             <div align="center">
               <lottie-player
                 src="assets/animations/21474-medical-frontliners.json"
