--- a/src/app/chh-web-components/chh-app-fee/chh-app-fee.page.html
+++ b/src/app/chh-web-components/chh-app-fee/chh-app-fee.page.html
@@ -52,6 +52,7 @@
         <ion-button
           expand="block"
           shape="round"
+          fill="outline"
           id="btn-confirm"
           (click)="ClosePopover()"
           color="danger"
