--- a/src/app/chh-web-components/chh-app-test/chh-app-test-cbc/chh-app-test-cbc.component.html
+++ b/src/app/chh-web-components/chh-app-test/chh-app-test-cbc/chh-app-test-cbc.component.html
@@ -30,8 +30,8 @@
           Result : {{x.Result}} {{x.Units}}<br />
           <div *ngIf="x.High_Low == 'H' || x.High_Low == 'L'">
             Remarks : {{x.High_Low}} 
-            <ion-icon name="arrow-up-outline" *ngIf="x.High_Low == 'H'"></ion-icon>
-            <ion-icon name="arrow-down-outline" *ngIf="x.High_Low == 'L'"></ion-icon>
+            <ion-icon name="arrow-up-outline" style="color:red" *ngIf="x.High_Low == 'H'"></ion-icon>
+            <ion-icon name="arrow-down-outline" style="color:blue" *ngIf="x.High_Low == 'L'"></ion-icon>
            </div>
         </ion-col>
         <ion-col size="5" >
@@ -63,8 +63,8 @@
           Result : {{x.Result}} {{x.Units}}<br />
           <div *ngIf="x.High_Low == 'H' || x.High_Low == 'L'">
             Remarks : {{x.High_Low}} 
-            <ion-icon name="arrow-up-outline" *ngIf="x.High_Low == 'H'"></ion-icon>
-            <ion-icon name="arrow-down-outline" *ngIf="x.High_Low == 'L'"></ion-icon>
+            <ion-icon name="arrow-up-outline" style="color:red" *ngIf="x.High_Low == 'H'"></ion-icon>
+            <ion-icon name="arrow-down-outline" style="color:blue" *ngIf="x.High_Low == 'L'"></ion-icon>
            </div>
         </ion-col>
         <ion-col size="5" >
@@ -96,8 +96,8 @@
           Result : {{x.Result}} {{x.Units}}<br />
           <div *ngIf="x.High_Low == 'H' || x.High_Low == 'L'">
             Remarks : {{x.High_Low}} 
-            <ion-icon name="arrow-up-outline" *ngIf="x.High_Low == 'H'"></ion-icon>
-            <ion-icon name="arrow-down-outline" *ngIf="x.High_Low == 'L'"></ion-icon>
+            <ion-icon name="arrow-up-outline" style="color:red" *ngIf="x.High_Low == 'H'"></ion-icon>
+            <ion-icon name="arrow-down-outline" style="color:blue" *ngIf="x.High_Low == 'L'"></ion-icon>
            </div>
         </ion-col>
         <ion-col size="5" >
@@ -129,8 +129,8 @@
           Result : {{x.Result}} {{x.Units}}<br />
           <div *ngIf="x.High_Low == 'H' || x.High_Low == 'L'">
             Remarks : {{x.High_Low}} 
-            <ion-icon name="arrow-up-outline" *ngIf="x.High_Low == 'H'"></ion-icon>
-            <ion-icon name="arrow-down-outline" *ngIf="x.High_Low == 'L'"></ion-icon>
+            <ion-icon name="arrow-up-outline" style="color:red" *ngIf="x.High_Low == 'H'"></ion-icon>
+            <ion-icon name="arrow-down-outline" style="color:blue" *ngIf="x.High_Low == 'L'"></ion-icon>
            </div>
         </ion-col>
         <ion-col size="5" >
