--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.scss
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.scss
@@ -1,7 +1,33 @@
-.nav-primary.active {
-    color: #275228;
-    font-weight: 1000 !important;
-    background-color: yellow;
-    //font-weight:bolder;
-  
+.footer {
+    width: 100%;
+    color: #fff;
+    font-weight: bold;
+    background: #275228;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+
+    bottom: 0px;
   }
+
+  ion-list.no-last-border {
+    :last-child {
+      --border-style: none !important;
+    }
+  }
+
+
+ @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap');
+
+.custom-font{
+  font-family: 'Inconsolata', monospace;
+}
+
+
+.nav-primary.active {
+  color: #275228;
+  font-weight: 1000 !important;
+  background-color: yellow;
+  //font-weight:bolder;
+
+}
